re PR fortran/30549 (compiler warning in resolve.c: possibly uninitialized use of name)

2007-01-23  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/30549
	* resolve.c (pure_function): Add return of name for state-
	ment functions..

From-SVN: r121080